# ImageEditor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: console_main.cpp  gui_main.cpp  main_window.cpp  main_window.h
